--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<header><title>This is title</title></header>
+<header><title>Ryan Powell's freelance page</title></header>
 <body>
 Hello world
 </body>
